--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
@@ -402,7 +402,7 @@
                   type="text"
                   name="general-clean-input"
                   value="General Clean"
-                  class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 general-clean-input-change"
+                  class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 general-clean-input-change"
                 />
               </div>
               <!-- End Of General Hours Adjust -->
@@ -465,7 +465,7 @@
                   type="text"
                   name="weekly-clean-input"
                   value="Weekly Price"
-                  class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 weekly-clean-input-change"
+                  class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 weekly-clean-input-change"
                 />
               </div>
               <!-- End Of Weekly Hours Adjust -->
@@ -528,7 +528,7 @@
                   type="text"
                   name="bi-weekly-clean-input"
                   value="Bi-Weekly Price"
-                  class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 bi-weekly-clean-input-change"
+                  class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 bi-weekly-clean-input-change"
                 />
               </div>
               <!-- End Of Bi-Weekly Hours Adjust -->
@@ -591,7 +591,7 @@
                   type="text"
                   name="monthly-clean-input"
                   value="Monthly Price"
-                  class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 monthly-clean-input-change"
+                  class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 monthly-clean-input-change"
                 />
               </div>
               <!-- End Of Monthly Hours Adjust -->
