mobile test for clean input widths

--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
@@ -771,7 +771,7 @@
                   type="text"
                   name="general-clean-input"
                   value="General Clean"
-                  class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 general-clean-input-change"
+                  class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 general-clean-input-change"
                 />
               </div>
               <!-- End Of General Hours Adjust -->
@@ -834,7 +834,7 @@
                   type="text"
                   name="weekly-clean-input"
                   value="Weekly Price"
-                  class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 weekly-clean-input-change"
+                  class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 weekly-clean-input-change"
                 />
               </div>
               <!-- End Of Weekly Hours Adjust -->
@@ -897,7 +897,7 @@
                   type="text"
                   name="bi-weekly-clean-input"
                   value="Bi-Weekly Price"
-                  class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 bi-weekly-clean-input-change"
+                  class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 bi-weekly-clean-input-change"
                 />
               </div>
               <!-- End Of Bi-Weekly Hours Adjust -->
@@ -956,7 +956,7 @@
                   type="text"
                   name="monthly-clean-input"
                   value="Monthly Price"
-                  class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 monthly-clean-input-change"
+                  class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 monthly-clean-input-change"
                 />
               </div>
               <!-- End Of Monthly Hours Adjust -->
@@ -1080,7 +1080,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
@@ -1462,7 +1462,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
@@ -1840,7 +1840,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
@@ -2226,7 +2226,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
@@ -2608,7 +2608,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
@@ -2994,7 +2994,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
@@ -3400,7 +3400,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
@@ -3826,7 +3826,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
@@ -4248,7 +4248,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
@@ -4682,7 +4682,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
@@ -5120,7 +5120,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
@@ -5586,7 +5586,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
@@ -6052,7 +6052,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
@@ -6542,7 +6542,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
@@ -7036,7 +7036,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
@@ -7534,7 +7534,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
@@ -8034,7 +8034,7 @@
                     type="text"
                     name="deep-clean-input"
                     value="Deep Clean"
-                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
+                    class="text-black border-2 border-black tracking-widest font-bold text-sm capitalize text-center max-w-full xs:text-sm font-serif focus:outline-emerald-600 deep-clean-input-change"
                   />
                 </div>
                 <!-- End Of Deep Hours Adjust -->
