changed name of js file to version 3

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         </div>
       </div>
       <div
-        class="bg-white p-3 shadow-lg rounded-xl w-[85vw] max-w-md max-h-full border-2 border-white dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white"
+        class="bg-white p-3 shadow-lg rounded-tl-xl rounded-bl-xl w-[85vw] max-w-md max-h-full border-2 border-white overflow-y-scroll dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white"
       >
         <div class="px-4 pt-2">
           <div
@@ -10412,6 +10412,6 @@
     <!-- IF YOU CLONE THIS FROM GITHUB THEN RUN THIS COMMAND FIRST IN THE TERMERNAL: npm install -->
 
     <!-- THEN RUN THE FOLLOWING COMMAND IN TERMANAL: npm run watch -->
-    <script src="./js/app-version-2.js"></script>
+    <script src="./js/app-version-3.js"></script>
   </body>
 </html>
