made it to where when you change a clean name, it also updates all other cleans in the show quote modal

--- a/index.html
+++ b/index.html
@@ -9313,7 +9313,7 @@
                   >
                     <!-- Price Container -->
                     <h3
-                      class="tracking-widest text-center text-xl font-semibold"
+                      class="tracking-widest text-center text-xl font-semibold capitalize other-deep-clean"
                     >
                       Deep Clean
                     </h3>
@@ -9367,7 +9367,7 @@
                   >
                     <!-- Price Container -->
                     <h3
-                      class="tracking-widest text-center text-xl font-semibold"
+                      class="tracking-widest text-center text-xl font-semibold capitalize other-general-clean"
                     >
                       General Clean
                     </h3>
@@ -9421,7 +9421,7 @@
                   >
                     <!-- Price Container -->
                     <h3
-                      class="tracking-widest text-center text-xl font-semibold"
+                      class="tracking-widest text-center text-xl font-semibold capitalize other-weekly-clean"
                     >
                       Weekly Service
                     </h3>
@@ -9475,7 +9475,7 @@
                   >
                     <!-- Price Container -->
                     <h3
-                      class="tracking-widest text-center text-xl font-semibold"
+                      class="tracking-widest text-center text-xl font-semibold capitalize other-bi-weekly-clean"
                     >
                       Bi-Weekly Service
                     </h3>
@@ -9529,7 +9529,7 @@
                   >
                     <!-- Price Container -->
                     <h3
-                      class="tracking-widest text-center text-xl font-semibold"
+                      class="tracking-widest text-center text-xl font-semibold capitalize other-monthly-clean"
                     >
                       Monthy Service
                     </h3>
