changed the menu to only get bigger on large screens, also took out the unnessary hovers for the menu

--- a/index.html
+++ b/index.html
@@ -8908,7 +8908,7 @@
         <span class="bg-red-600 inline-block px-3 small-text"></span>
       </div>
       <div
-        class="bg-white p-3 shadow-lg rounded-xl rounded-tr-none rounded-br-none border-t-r w-[90vw] max-w-sm max-h-[80vh] lg:max-h-[95vh] border-2 border-white xs:w-[80vw] dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white overflow-y-scroll"
+        class="bg-white p-3 shadow-lg rounded-xl rounded-tr-none rounded-br-none border-t-r w-[90vw] max-w-sm sm:max-w-2xl md:max-w-xl max-h-[80vh] lg:max-h-[95vh] border-2 border-white xs:w-[80vw] dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white overflow-y-scroll"
       >
         <div class="px-2 sm:px-4 pt-2">
           <!-- Quote Heading -->
@@ -9729,27 +9729,24 @@
     <!-- Analytics Modal -->
     <!-- Sidebar -->
     <div
-      class="fixed top-1/2 -translate-y-1/2 bg-emerald-700 w-14 rounded-xl -translate-x-12 hover:bg-emerald-600 shadow-2xl flex items-start justify-center py-2 border-2 border-transparent hover:border-black md:w-36 md:justify-end md:pr-1 dark:bg-gradient-to-tr dark:from-emerald-600 dark:to-neutral-600 dark:hover:border-white group sidebar show-sidebar"
+      class="fixed top-1/2 -translate-y-1/2 bg-emerald-700 w-14 rounded-xl -translate-x-12 hover:bg-emerald-600 shadow-2xl flex items-start justify-center py-2 border-2 border-transparent hover:border-black lg:w-36 lg:justify-end lg:pr-1 dark:bg-gradient-to-tr dark:from-emerald-600 dark:to-neutral-600 dark:hover:border-white group sidebar show-sidebar"
     >
       <div class="flex flex-col items-center sidebar-wrap">
         <div>
           <span
-            class="font-semibold hidden md:group-hover:inline-block tracking-widest text-white menu-text"
+            class="font-semibold hidden tracking-widest text-white menu-text"
             >Menu</span
           >
           <i
             class="fa-solid fa-sliders mb-4 text-2xl bg-white rounded-full p-1 border-2 border-black"
           ></i>
         </div>
-        <div
-          class="flex flex-col space-y-4 group-hover:md:items-end settings-wrapper"
-        >
+        <div class="flex flex-col space-y-4 settings-wrapper">
           <!-- Settings Icon -->
           <div
-            class="group-hover:md:bg-slate-100 group-hover:md:p-2 group-hover:md:w-[119px] cursor-pointer transition-all duration-200 border-2 border-transparent md:flex md:justify-around md:items-center md:hover:shadow-lg md:hover:border-emerald-700 settings-button settings"
+            class="cursor-pointer transition-all duration-200 border-2 border-transparent md:flex md:justify-around md:items-center lg:hover:shadow-lg lg:hover:border-emerald-700 settings-button settings"
           >
-            <span
-              class="font-semibold hidden md:group-hover:inline-block tracking-widest settings-text"
+            <span class="font-semibold hidden tracking-widest settings-text"
               >Settings</span
             >
             <a href="#" title="Settings" class="ml-[.10rem]">
@@ -9761,10 +9758,9 @@
           <!-- End Of Settings Icon -->
           <!-- Save Icon -->
           <div
-            class="group-hover:md:bg-slate-100 group-hover:md:p-2 group-hover:md:w-[119px] cursor-pointer transition-all duration-200 border-2 border-transparent md:flex md:justify-around md:items-center md:hover:shadow-lg md:hover:border-emerald-700 save-button save"
+            class="cursor-pointer transition-all duration-200 border-2 border-transparent md:flex md:justify-around md:items-center lg:hover:shadow-lg lg:hover:border-emerald-700 save-button save"
           >
-            <span
-              class="font-semibold hidden md:group-hover:inline-block tracking-widest save-text"
+            <span class="font-semibold hidden tracking-widest save-text"
               >Quotes</span
             >
             <a href="#" title="Saved Quotes" class="ml-[.17rem]">
@@ -9776,10 +9772,9 @@
           <!-- End Of Save Icon -->
           <!-- Analytics Icon -->
           <div
-            class="group-hover:md:bg-slate-100 group-hover:md:p-2 group-hover:md:w-[119px] cursor-pointer transition-all duration-200 border-2 border-transparent md:flex md:justify-around md:items-center md:hover:shadow-lg md:hover:border-emerald-700 analytics-button analytics"
+            class="cursor-pointer transition-all duration-200 border-2 border-transparent md:flex md:justify-around md:items-center lg:hover:shadow-lg lg:hover:border-emerald-700 analytics-button analytics"
           >
-            <span
-              class="font-semibold hidden md:group-hover:inline-block tracking-widest analytics-text"
+            <span class="font-semibold hidden tracking-widest analytics-text"
               >Analytics</span
             >
             <a href="#" title="Analytics Data" class="ml-[.17rem]">
