--- a/index.html
+++ b/index.html
@@ -8908,7 +8908,7 @@
         <span class="bg-red-600 inline-block px-3 small-text"></span>
       </div>
       <div
-        class="bg-white p-3 shadow-lg rounded-xl rounded-tr-none rounded-br-none border-t-r w-[90vw] max-w-sm sm:max-w-2xl md:max-w-xl max-h-[80vh] lg:max-h-[95vh] border-2 border-white xs:w-[80vw] dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white overflow-y-scroll"
+        class="bg-white p-3 shadow-lg rounded-xl rounded-tr-none rounded-br-none border-t-r w-[90vw] max-w-sm sm:max-w-2xl md:max-w-4xl max-h-[80vh] sm:max-h-[95vh] border-2 border-white xs:w-[80vw] dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white overflow-y-scroll"
       >
         <div class="px-2 sm:px-4 pt-2">
           <!-- Quote Heading -->
@@ -8919,6 +8919,11 @@
               Saved Quotes
             </h3>
             <div class="flex items-center gap-2 sm:gap-4">
+              <button class="grid-btn">
+                <span class="grid-icon">
+                  <i class="fa-sharp fa-solid fa-grip-vertical fa-2xl"></i>
+                </span>
+              </button>
               <button class="sort-btn">
                 <span class="sorted-icon">
                   <i class="fa-solid fa-arrow-down-a-z fa-2xl"></i>
@@ -9042,7 +9047,7 @@
           </div>
           <!-- End Of Saved Quotes Body -->
           <!-- Quote Info -->
-          <div class="quote-names"></div>
+          <div class="quote-names grid-cols-2 gap-3 space-y-3"></div>
           <!-- End Of Quote Info -->
         </div>
       </div>
