--- a/index.html
+++ b/index.html
@@ -8941,8 +8941,8 @@
           </div>
           <!-- End Of Quote Heading -->
           <!-- Saved Quotes Body -->
-          <div class="border-b-2 mb-4 pb-4">
-            <div class="text-center mb-4">
+          <div class="border-b-2 mb-4 pb-4 text-center">
+            <div class="text-center mb-2 inline-block mx-auto md:mb-0">
               <label
                 for="search-by-name"
                 class="tracking-wider text-lg font-semibold text-center"
@@ -10507,6 +10507,6 @@
     <!-- IF YOU CLONE THIS FROM GITHUB THEN RUN THIS COMMAND FIRST IN THE TERMERNAL: npm install -->
 
     <!-- THEN RUN THE FOLLOWING COMMAND IN TERMANAL: npm run watch -->
-    <script src="./js/app-version-6.js"></script>
+    <script src="./js/app-version-7.js"></script>
   </body>
 </html>
