--- a/index.html
+++ b/index.html
@@ -151,6 +151,74 @@
         >
       </div>
     </div>
+    <!-- Icon Modal -->
+    <div
+      class="icon-modal bg-black bg-opacity-70 h-screen fixed top-0 left-0 w-full backdrop-blur-sm items-center justify-center hidden invisible"
+    >
+      <div
+        class="bg-white p-3 shadow-lg rounded-tl-xl rounded-bl-xl w-[70vw] max-w-md max-h-full border-2 border-white overflow-y-scroll dark:bg-gradient-to-br dark:from-zinc-700 dark:to-neutral-800 dark:text-white"
+      >
+        <div class="px-4 pt-2">
+          <div
+            class="flex items-start justify-between gap-6 border-b-2 mb-4 pb-4"
+          >
+            <span class="tracking-widest font-semibold text-2xl font-serif"
+              >Icon Picker</span
+            >
+            <button class="close-modal">
+              <i
+                class="fa-solid fa-circle-xmark text-red-500 text-3xl rounded-full hover:text-red-600 close"
+              ></i>
+            </button>
+          </div>
+          <div class="flex justify-center icon-picker-container">
+            <div class="flex flex-wrap gap-3">
+              <a href="#"
+                ><i
+                  class="fa-solid fa-hand-sparkles fa-2x text-emerald-600 cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-spray-can-sparkles fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-calendar-week fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-calendar-day fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-calendar-days fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-regular fa-calendar-days fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-solid fa-calendar fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+              <a href="#"
+                ><i
+                  class="fa-regular fa-calendar fa-2x cursor-pointer picker-icon"
+                ></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Of Icon Modal -->
     <!-- Settings Modal -->
     <div
       class="modal bg-black bg-opacity-70 h-screen fixed top-0 left-0 w-full backdrop-blur-sm hidden items-center justify-center invisible"
@@ -9942,10 +10010,10 @@
           >
             <!-- Deep Clean -->
             <article
-              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 deep-article main-article"
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 main-article deep-article"
             >
               <i
-                class="fa-solid fa-hand-sparkles p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
+                class="fa-solid fa-hand-sparkles p-4 fa-2x bg-white rounded-full dark:bg-neutral-800 cursor-pointer clean-icon"
               ></i>
               <!-- Hours Changed Icon -->
               <span
@@ -10073,10 +10141,10 @@
 
             <!-- General Clean -->
             <article
-              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 general-article main-article"
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 main-article general-article"
             >
               <i
-                class="fa-solid fa-spray-can-sparkles p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
+                class="fa-solid fa-spray-can-sparkles p-4 fa-2x bg-white rounded-full dark:bg-neutral-800 cursor-pointer clean-icon"
               ></i>
               <span
                 class="bg-red-400 p-2 rounded-full text-white text-xs font-semibold tracking-wider deep-changed hidden"
@@ -10176,10 +10244,10 @@
 
             <!-- Weekly Clean -->
             <article
-              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 weekly-article main-article"
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 main-article weekly-article"
             >
               <i
-                class="fa-solid fa-calendar-week p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
+                class="fa-solid fa-calendar-week p-4 fa-2x bg-white rounded-full dark:bg-neutral-800 cursor-pointer clean-icon"
               ></i>
               <span
                 class="bg-red-400 p-2 rounded-full text-white text-xs font-semibold tracking-wider deep-changed hidden"
@@ -10281,10 +10349,10 @@
 
             <!-- Bi-Weekly Clean -->
             <article
-              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 bi-weekly-article main-article"
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 main-article bi-weekly-article"
             >
               <i
-                class="fa-solid fa-calendar-day p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
+                class="fa-solid fa-calendar-day p-4 fa-2x bg-white rounded-full dark:bg-neutral-800 cursor-pointer clean-icon"
               ></i>
               <span
                 class="bg-red-400 p-2 rounded-full text-white text-xs font-semibold tracking-wider deep-changed hidden"
@@ -10386,10 +10454,10 @@
 
             <!-- Monthly Clean -->
             <article
-              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 monthly-article main-article"
+              class="p-3 bg-[#f8f3f9] border-2 border-transparent transition-all duration-300 dark:bg-gradient-to-br dark:from-emerald-700 dark:to-neutral-800 main-article monthly-article"
             >
               <i
-                class="fa-solid fa-calendar-days p-4 text-xl bg-white rounded-full dark:bg-neutral-800"
+                class="fa-solid fa-calendar-days p-4 fa-2x bg-white rounded-full dark:bg-neutral-800 cursor-pointer clean-icon"
               ></i>
               <span
                 class="bg-red-400 p-2 rounded-full text-white text-xs font-semibold tracking-wider deep-changed hidden"
